[gd_scene load_steps=3 format=3 uid="uid://b4iwy3vdjsbsk"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_2nxak"]
[ext_resource type="Script" path="res://scenes/main/dialogue_generator.gd" id="2_kgr3w"]

[node name="Main" type="Node2D"]
script = ExtResource("1_2nxak")
done_color = Color(1, 0.960938, 0, 1)
current_color = Color(1, 1, 1, 1)
todo_color = Color(0.351563, 0.437683, 1, 1)

[node name="DialogueOption" type="RichTextLabel" parent="."]
visible = false
offset_left = 21.0
offset_top = 13.0
offset_right = 197.0
offset_bottom = 77.0
size_flags_horizontal = 0
size_flags_vertical = 4
bbcode_enabled = true
text = "[center]dis bitch got me paying her rent [/center]"

[node name="DialogueGenerator" type="Node2D" parent="."]
script = ExtResource("2_kgr3w")

[node name="Question" type="RichTextLabel" parent="DialogueGenerator"]
offset_left = 440.0
offset_top = 281.0
offset_right = 704.0
offset_bottom = 348.0
bbcode_enabled = true
text = "Test question"

[node name="Markers" type="Node2D" parent="DialogueGenerator"]

[node name="Question" type="Marker2D" parent="DialogueGenerator/Markers"]
position = Vector2(578, 549)

[node name="DialogueMarker1" type="Marker2D" parent="DialogueGenerator/Markers"]
position = Vector2(554, 62)

[node name="DialogueMarker2" type="Marker2D" parent="DialogueGenerator/Markers"]
position = Vector2(99, 328)

[node name="DialogueMarker3" type="Marker2D" parent="DialogueGenerator/Markers"]
position = Vector2(940, 286)

[node name="DialogueMarker4" type="Marker2D" parent="DialogueGenerator/Markers"]
position = Vector2(578, 549)

[node name="Options" type="Node2D" parent="DialogueGenerator"]
